--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "server": "json-server --watch api/db.json --port 3000"
+    "test": "ng test"
   },
   "prettier": {
     "printWidth": 100,
@@ -40,7 +39,6 @@
     "@tailwindcss/postcss": "^4.1.18",
     "autoprefixer": "^10.4.23",
     "jsdom": "^27.1.0",
-    "json-server": "^0.17.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "typescript": "~5.9.2",
